added python app; updated gitignore

--- a/src/assets/css/applications.css
+++ b/src/assets/css/applications.css
@@ -79,6 +79,10 @@
     background-image: url('../../assets/img/sm/vvh-financial.jpg');
 }
 
+#unit-converter {
+    background-image: url('../../assets/img/sm/unit-converter.jpg');
+}
+
 #weather-dashboard {
     background-image: url('../../assets/img/sm/weather-dashboard.jpg');
 }
