--- a/src/components/Skillset/index.css
+++ b/src/components/Skillset/index.css
@@ -6,6 +6,11 @@
     align-items: baseline;
 }
 
+.skill-icon {
+    font-size: 1.2rem;
+    margin-right: 0.5rem;
+}
+
 @media screen and (min-width: 1024px) {
     #skills {
         grid-template-columns: auto 1fr;
