--- a/src/assets/css/applications.css
+++ b/src/assets/css/applications.css
@@ -1,19 +1,12 @@
 /* palette      frontend            backend             fullstack  
     red                             artist-ouvre        fitness-logbook
     orange      sun-tracker           
-    yellow      caesar-cipher                           address-book
-    green       ratio-calculator                        note-taker
-    blue        bluestrawberry                          job-tracker
-    violet      password-generator                      vvh financial
+    yellow      caesar-cipher 
+    green       ratio-calculator 
+    blue        bluestrawberry 
+    violet      password-generator  
     black       coding-quiz         readme-generator
     white       escowinart          meal-prep
-
-                                    employee-tracker
-                                    portfolio-generator
-                                    readme-generator
-                                    social-network-api
-                                    team-profile-generator
-                                    unit-converter
 */
 
 
