--- a/src/components/Skillset/index.css
+++ b/src/components/Skillset/index.css
@@ -8,6 +8,12 @@
 .skill-icon {
     font-size: 1.2rem;
     margin-right: 0.5rem;
+    color: var(--dark-accent);
+    transition: color 0.2s ease;
+}
+
+.skill-type:hover .skill-icon {
+    color: var(--red);
 }
 
 @media screen and (min-width: 1024px) {
